--- a/customize_glob.yaml
+++ b/customize_glob.yaml
@@ -1,6 +1,8 @@
 #####################################################################
 ### CUSTOMIZATION (global - wildcards)
 #####################################################################
+  "script.pool_*":
+    hidden: true
 
   "*.*test*":
     haaska_hidden: true
