--- a/automation/fan_master_bedroom.yaml
+++ b/automation/fan_master_bedroom.yaml
@@ -1,49 +1,66 @@
-######################################################################
-#### Master Bedroom Fan Speed
-######################################################################
-
-- alias: master_bedroom_fan_speed_selector
-  trigger:
-    - platform: state
-      entity_id: input_select.master_bedroom_fan_speed
-
-  condition:
-    - condition: template
-      value_template: "{{ trigger.to_state.state != 'Select an option...' }}"
-
-  action:
-    # Turn the corresponding switch on to send the fan speed command
-    - service: switch.turn_on
-      data_template:
-        entity_id: "switch.master_bedroom_fan_{{ trigger.to_state.state|lower|replace(' ', '_') }}"
-
-    # Reset the Input Select to "Select an option..."
-    - service: input_select.select_option
-      data_template:
-        entity_id: "{{ trigger.to_state.entity_id }}"
-        option: Select an option...
-
-######################################################################
-#### Master Bedroom Fan Options
-######################################################################
-
-- alias: master_bedroom_fan_option_selector
-  trigger:
-    - platform: state
-      entity_id: input_select.master_bedroom_fan_options
-
-  condition:
-    - condition: template
-      value_template: "{{ trigger.to_state.state != 'Select an option...' }}"
-
-  action:
-    # Turn the corresponding switch on to send the fan speed command
-    - service: switch.turn_on
-      data_template:
-        entity_id: "switch.master_bedroom_fan_{{ trigger.to_state.state|lower|replace(' ', '_') }}"
-
-    # Reset the Input Select to "Select an option..."
-    - service: input_select.select_option
-      data_template:
-        entity_id: "{{ trigger.to_state.entity_id }}"
-        option: Select an option...
+#######################################################################
+##### Master Bedroom Fan Speed
+#######################################################################
+#- alias: master_bedroom_fan_speed_selector
+#  trigger:
+#    - platform: state
+#      entity_id: input_select.master_bedroom_fan_speed
+#
+#  condition:
+#    - condition: template
+#      value_template: "{{ trigger.to_state.state != 'Select an option...' }}"
+#
+#  action:
+#    # Turn the corresponding switch on to send the fan speed command
+#    - service: switch.turn_on
+#      data_template:
+#        entity_id: "switch.master_bedroom_fan_{{ trigger.to_state.state|lower|replace(' ', '_') }}"
+#
+#    # Reset the Input Select to "Select an option..."
+#    - service: input_select.select_option
+#      data_template:
+#        entity_id: "{{ trigger.to_state.entity_id }}"
+#        option: Select an option...
+#
+#######################################################################
+##### Master Bedroom Fan Options
+#######################################################################
+#- alias: master_bedroom_fan_option_selector
+#  trigger:
+#    - platform: state
+#      entity_id: input_select.master_bedroom_fan_options
+#
+#  condition:
+#    - condition: template
+#      value_template: "{{ trigger.to_state.state != 'Select an option...' }}"
+#
+#  action:
+#    # Turn the corresponding switch on to send the fan speed command
+#    - service: switch.turn_on
+#      data_template:
+#        entity_id: "switch.master_bedroom_fan_{{ trigger.to_state.state|lower|replace(' ', '_') }}"
+#
+#    # Reset the Input Select to "Select an option..."
+#    - service: input_select.select_option
+#      data_template:
+#        entity_id: "{{ trigger.to_state.entity_id }}"
+#        option: Select an option...
+#
+#######################################################################
+##### Master Bedroom Fan Auto High
+#######################################################################
+#- alias: master_bedroom_fan_auto_high
+#  trigger:
+#    - platform: state
+#      entity_id: script.master_bedroom_night_time
+#      to: 'on'
+#
+#  condition:
+#    - condition: numeric_state
+#      entity_id: sensor.2gig_technologies_ct101_thermostat_iris_temperature_42_1
+#      above: 82
+#
+#  action:
+#### Turn the ceiling fan on auto-high
+#    - service: script.turn_on
+#      entity_id: script.mbr_fan_speed_step_high
