--- a/automation/fountains.yaml
+++ b/automation/fountains.yaml
@@ -1,63 +1,63 @@
-#####################################################################
-### FOUNTAINS ON
-#####################################################################
-
-- alias: turn on fountains
-  trigger:
-    - platform: sun
-      event: sunrise
-      offset: '01:30:00'
-
-    - platform: state
-      entity_id: group.family
-      from: 'off'
-      to: 'on'
-
-  condition:
-    - condition: numeric_state
-      entity_id: sensor.pws_wind_mph
-      below: 10
-
-    - condition: state
-      entity_id: input_boolean.rain
-      state: 'off'
-
-    - condition: sun
-      before: sunset
-
-    - condition: state
-      entity_id: group.family
-      state: 'on'
-
-  action:
-    - service: switch.turn_on
-      data:
-        entity_id: switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0
-
-#####################################################################
-### FOUNTAINS OFF
-#####################################################################
-
-- alias: turn off fountains
-  hide_entity: True
-  trigger:
-    - platform: sun
-      event: sunset
-      offset: '00:05:00'
-
-    - platform: state
-      entity_id: input_boolean.rain
-      from: 'off'
-      to: 'on'
-      for:
-        minutes: 5
-
-  condition:
-    - condition: state
-      entity_id: switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0
-      state: 'on'
-
-  action:
-    - service: switch.turn_off
-      data:
-        entity_id: switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0
+######################################################################
+#### FOUNTAINS ON
+######################################################################
+#
+#- alias: turn on fountains
+#  trigger:
+#    - platform: sun
+#      event: sunrise
+#      offset: '01:30:00'
+#
+#    - platform: state
+#      entity_id: group.all_devices
+#      from: 'not_home'
+#      to: 'home'
+#
+#  condition:
+#    - condition: numeric_state
+#      entity_id: sensor.pws_wind_mph
+#      below: 10
+#
+#    - condition: state
+#      entity_id: input_boolean.rain
+#      state: 'off'
+#
+#    - condition: sun
+#      before: sunset
+#
+#    - condition: state
+#      entity_id: group.all_devices
+#      state: 'home'
+#
+#  action:
+#    - service: switch.turn_on
+#      data:
+#        entity_id: switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0
+#
+######################################################################
+#### FOUNTAINS OFF
+######################################################################
+#
+#- alias: turn off fountains
+#  hide_entity: True
+#  trigger:
+#    - platform: sun
+#      event: sunset
+#      offset: '00:05:00'
+#
+#    - platform: state
+#      entity_id: input_boolean.rain
+#      from: 'off'
+#      to: 'on'
+#      for:
+#        minutes: 5
+#
+#  condition:
+#    - condition: state
+#      entity_id: switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0
+#      state: 'on'
+#
+#  action:
+#    - service: switch.turn_off
+#      data:
+#        entity_id: switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0
