--- a/automation/hvac_downstairs_heat.yaml
+++ b/automation/hvac_downstairs_heat.yaml
@@ -4,14 +4,14 @@
 - alias: downstairs heating schedule
   trigger:
     - platform: time
-      after: '05:59:59'
+      at: '06:00:00'
 
   condition:
     - condition: or
       conditions:
         - condition: state
-          entity_id: group.family
-          state: 'on'
+          entity_id: group.all_devices
+          state: 'home'
 
         - condition: state
           entity_id: input_boolean.visitor_mode
@@ -41,8 +41,8 @@
     - condition: or
       conditions:
         - condition: state
-          entity_id: group.family
-          state: 'on'
+          entity_id: group.all_devices
+          state: 'home'
 
         - condition: state
           entity_id: input_boolean.visitor_mode
