--- a/automation/hvac_sliders_cool.yaml
+++ b/automation/hvac_sliders_cool.yaml
@@ -10,7 +10,7 @@
     - service: climate.set_temperature
       data_template:
         entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
-        temperature: '{{ trigger.to_state.state | int }}'
+        temperature: '{{ states.input_slider.downstairs_ac.state | int }}'
 
 #####################################################################
 ### Upstairs Input slider temperature adjustment
@@ -23,8 +23,8 @@
   action:
     - service: climate.set_temperature
       data_template:
-        entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_24_2
-        temperature: '{{ trigger.to_state.state | int }}'
+        entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_42_2
+        temperature: '{{ states.input_slider.upstairs_ac.state | int }}'
 
 #####################################################################
 ### Downstairs - Change Input slider adjust to match temperature (downstairs ac)
