--- a/automation/input_boolean.yaml
+++ b/automation/input_boolean.yaml
@@ -5,7 +5,7 @@
   hide_entity: True
   trigger:
     - platform: time
-      after: '14:59:59'
+      at: '15:00:00'
 
   condition:
     - condition: time
@@ -32,7 +32,17 @@
   hide_entity: True
   trigger:
     - platform: time
-      after: '17:59:59'
+      at: '18:00:00'
+
+    - platform: state
+      entity_id: input_boolean.holiday
+      from: 'off'
+      to: 'on'
+
+  condition:
+    - condition: state
+      entity_id: input_boolean.peak_hours
+      state: 'on'
 
   action:
     - service: input_boolean.turn_off
@@ -46,7 +56,7 @@
   hide_entity: True
   trigger:
     - platform: time
-      after: '23:29:59'
+      at: '23:30:00'
 
   condition:
     - condition: time
@@ -69,7 +79,7 @@
   hide_entity: True
   trigger:
     - platform: time
-      after: '03:59:59'
+      at: '04:00:00'
 
   condition:
     - condition: time
@@ -93,7 +103,7 @@
 
   trigger:
     - platform: time
-      after: '00:59:59'
+      at: '01:00:00'
 
   condition:
     - condition: time
@@ -113,7 +123,7 @@
   hide_entity: True
   trigger:
     - platform: time
-      after: '07:59:59'
+      at: '08:00:00'
 
   condition:
     - condition: time
@@ -133,7 +143,7 @@
   hide_entity: True
   trigger:
     - platform: time
-      after: '03:59:59'
+      at: '04:00:00'
 
   condition:
     - condition: time
@@ -156,7 +166,7 @@
   hide_entity: True
   trigger:
     - platform: time
-      after: '07:59:59'
+      at: '08:00:00'
 
   condition:
     - condition: time
