--- a/customize/customize.yaml
+++ b/customize/customize.yaml
@@ -1,58 +1,4 @@
 #####################################################################
-### ROOMS VIEW
-#####################################################################
-
-## LIVING ROOM
-  group.living_room:
-    order: 1
-
-## ENTRYWAY LIGHTS
-  group.entry_lighting:
-    order: 2
-
-## ACCENT LIGHTS
-  group.accent_lights:
-    friendly_name: "Accent Lights"
-    order: 3
-
-## KITCHEN
-  group.kitchen:
-    order: 4
-
-## DINING ROOM
-  group.dining_room:
-    order: 5
-
-## MASTER BEDROOM
-  group.master_bedroom:
-    haaska_name: "Master Bedroom Lights"
-    order: 6
-
-## Master Bath Roller Shades
-  cover.somfy_unknown_type5a52_id5402_level_37_0:
-    friendly_name: "Master Bath Shades"
-    homebridge_cover_type: rollershutter
-    icon: mdi:blinds
-    order: 7
-
-## Master Bath Roller Shade State (hidden)
-  cover.somfy_unknown_type5a52_id5402_switch_37_0:
-    friendly_name: "Bathroom Shade State"
-    haaska_hidden: true
-    homebridge_hidden: true
-    icon: mdi:blinds
-
-## BILLIARDS ROOM
-  group.billiards_room:
-    friendly_name: "Billiards Room"
-    order: 8
-
-## OFFICE
-  group.office:
-    friendly_name: "Office"
-    order: 9
-
-#####################################################################
 ### CLIMATE VIEW
 #####################################################################
 
@@ -72,202 +18,15 @@
     order: 3
 
 #####################################################################
-### Device Trackers
-#####################################################################
-
-  input_boolean.rick_home:
-    friendly_name: "Rick"
-    entity_picture: /local/rick.jpg
-    haaska_hidden: true
-
-  input_boolean.megs_home:
-    friendly_name: "Megs"
-    entity_picture: /local/megs.jpg
-    haaska_hidden: true
-
-  device_tracker.iphwn666:
-    friendly_name: "Rick"
-    entity_picture: /local/rick.jpg
-    haaska_hidden: true
-
-  device_tracker.megs_iphone7:
-    friendly_name: "Megs"
-    entity_picture: /local/megs.jpg
-    haaska_hidden: true
-
-  device_tracker.iphone7:
-    friendly_name: "Megs"
-    entity_picture: /local/megs.jpg
-    haaska_hidden: true
-
-#####################################################################
 ### SWITCHES
 #####################################################################
 
-## Outdoor GE Zwave Outlet (Christmas Lights, etc.)
-  switch.ge_Unknown_type4f50_id3031_switch_23_0:
-    friendly_name: "Party Lights"
-    icon: mdi:glass-mug
-
-## Billiards Room Lights
-  switch.ge_45609_onoff_relay_switch_switch_2_0:
-    friendly_name: "Billiards Lights"
-    icon: mdi:ceiling-light
-
-## Patio Lights
-  switch.ge_12722_onoff_relay_switch_switch_7_0:
-    friendly_name: "Patio Lights"
-    icon: mdi:white-balance-incandescent
-
-## Pool Light
-  switch.ge_12722_onoff_relay_switch_switch_25_0:
-    friendly_name: "Pool Light"
-    icon: mdi:pool
-
-  switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0:
-    friendly_name: "Fountains"
-    icon: mdi:beach
-
-## Porch Lights
-  switch.ge_45609_onoff_relay_switch_switch_19_0:
-    friendly_name: "South Porch Lights"
-    icon: mdi:white-balance-incandescent
-
-  switch.ge_45609_onoff_relay_switch_switch_20_0:
-    friendly_name: "Front Porch Lights"
-    icon: mdi:white-balance-incandescent
-
-## Outdoor Speakers
-  switch.outdoor_speakers:
-    friendly_name: "Outdoor Speakers"
-    entity_picture: /local/music.ico
-#    persistent: true
-
-## Humidifier
-  switch.humidifier:
-    friendly_name: "Humidifier"
-    icon: mdi:cup-water
-#    persistent: true
-
-## Accent - Staircase Lamp
-  switch.staircase_lamp:
-    friendly_name: "Staircase Lamp"
-    icon: mdi:lamp
-#    persistent: true
-
-## Accent - Wine Room Lamp
-  switch.wine_room_lamp:
-#    haaska_hidden: true
-    friendly_name: "Wine Room Lamp"
-    icon: mdi:lamp
-#    persistent: true
-
 ## Accent - Spare
-  switch.staircase_spare:
+  switch.rf_switch_3:
     hidden: true
     haaska_hidden: true
     friendly_name: "Staircase Christmas Lights"
     icon: mdi:stocking
-#    persistent: true
-
-#####################################################################
-### LIGHTS & Dimmers
-#####################################################################
-
-## MBR Chandelier
-  light.ge_12724_3way_dimmer_switch_level_8_0:
-    friendly_name: "Master Bedroom Chandelier"
-    haaska_name: "Master Bedroom Chandelier"
-    icon: mdi:ceiling-light
-
-## MBR Bed Lights
-  light.under_bed_lights:
-    friendly_name: "Bed Lights"
-    icon: mdi:led-on
-
-## Kitchen Lights
-  light.ge_12724_3way_dimmer_switch_level_33_0:
-    friendly_name: "Kitchen Lights"
-    icon: mdi:white-balance-incandescent
-
-## Dining Room Chandelier
-  light.ge_12724_3way_dimmer_switch_level_34_0:
-    friendly_name: "Dining Room Chandelier"
-    haaska_name: "Dining Room Light"
-    icon: mdi:ceiling-light
-
-## Flux RGB bulb
-  light.flux_rgb:
-    friendly_name: "Desk Lamp"
-    icon: mdi:lamp
-#    persistent: true
-
-#####################################################################
-### PHILIPS HUE (hidden from Alexa due to native integration)
-#####################################################################
-
-## Living Room Lamp
-  light.living_room_lamp:
-    haaska_hidden: true
-    icon: mdi:lamp
-
-## Entryway Lights
-  light.south_entry:
-    haaska_hidden: true
-    icon: mdi:white-balance-incandescent
-
-  light.kitchen_entry:
-    haaska_hidden: true
-    icon: mdi:white-balance-incandescent
-
-  light.center_entry:
-    haaska_hidden: true
-    icon: mdi:white-balance-incandescent
-
-## Ceiling Lights
-  light.northeast_ceiling:
-    haaska_hidden: true
-    icon: mdi:white-balance-incandescent
-
-  light.northwest_ceiling:
-    haaska_hidden: true
-    icon: mdi:white-balance-incandescent
-
-  light.southeast_ceiling:
-    haaska_hidden: true
-    icon: mdi:white-balance-incandescent
-
-  light.southwest_ceiling:
-    haaska_hidden: true
-    icon: mdi:white-balance-incandescent
-
-#####################################################################
-### LOCKS
-#####################################################################
-
-  lock.assa_abloy_yale_real_living_captouch_lever_locked_12_0:
-    friendly_name: "Beach Bathroom Door"
-    haaska_hidden: true
-
-  lock.assa_abloy_yale_real_living_captouch_lever_locked_16_0:
-    friendly_name: "South Door"
-    haaska_hidden: true
-
-#####################################################################
-### ROLLER SHADES
-#####################################################################
-
-## Kitchen Roller Shade Control
-  cover.somfy_unknown_type5a52_id5401_level_39_0:
-    friendly_name: "Kitchen Shade"
-    homebridge_cover_type: rollershutter
-    icon: mdi:blinds
-## Kitchen Roller Shade State (hidden)
-  cover.somfy_unknown_type5a52_id5401_switch_39_0:
-    friendly_name: "Kitchen Shade State"
-    haaska_hidden: true
-    homebridge_hidden: true
-    icon: mdi:blinds
 
 #####################################################################
 ### CLIMATE - Devices & Sensors
@@ -300,13 +59,13 @@
     haaska_hidden: true
 
 ## upstairs
-  sensor.2gig_technologies_ct101_thermostat_iris_temperature_24_1:
+  sensor.2gig_technologies_ct101_thermostat_iris_temperature_42_1:
     friendly_name: "Upstairs Temp"
 
-  climate.2gig_technologies_ct101_thermostat_iris_cooling_1_24_2:
+  climate.2gig_technologies_ct101_thermostat_iris_cooling_1_42_2:
     friendly_name: "Upstairs Cooling Setpoint"
 
-  climate.2gig_technologies_ct101_thermostat_iris_heating_1_24_1:
+  climate.2gig_technologies_ct101_thermostat_iris_heating_1_42_1:
     friendly_name: "Upstairs Heating Setpoint"
 
   sensor.hvac_upstairs_op_state:
@@ -337,24 +96,6 @@
     friendly_name: "Upstairs Quick Heating"
     entity_picture: /local/flame.png
 
-  script.heat_downstairs_120min:
-    friendly_name: "Downstairs Max Heating"
-    icon: mdi:fire
-
-  script.heat_upstairs_120min:
-    friendly_name: "Upstairs Max Heating"
-    icon: mdi:fire
-
-  script.heat_downstairs_180min:
-    friendly_name: "Downstairs Auto Heating"
-    icon: mdi:fire
-    haaska_hidden: true
-
-  script.heat_upstairs_180min:
-    friendly_name: "Upstairs Auto Heating"
-    icon: mdi:fire
-    haaska_hidden: true
-
   script.cool_downstairs_60min:
     friendly_name: "Downstairs Quick Cooling"
     entity_picture: /local/snowflake.png
@@ -362,24 +103,6 @@
   script.cool_upstairs_60min:
     friendly_name: "Upstairs Quick Cooling"
     entity_picture: /local/snowflake.png
-
-  script.cool_downstairs_120min:
-    friendly_name: "Downstairs Max Cooling"
-    icon: mdi:snowflake
-
-  script.cool_upstairs_120min:
-    friendly_name: "Upstairs Max Cooling"
-    icon: mdi:snowflake
-
-  script.cool_downstairs_180min:
-    friendly_name: "Downstairs Auto Cooling"
-    icon: mdi:snowflake
-    haaska_hidden: true
-
-  script.cool_upstairs_180min:
-    friendly_name: "Upstairs Auto Cooling"
-    icon: mdi:snowflake
-    haaska_hidden: true
 
   script.mbr_fan_speed_step_low:
     friendly_name: "Master Bedroom Fan Auto Low"
@@ -392,104 +115,8 @@
     haaska_hidden: true
 
 #####################################################################
-### MEDIA PLAYERS
-#####################################################################
-
-## Kodi Players
-  media_player.kodi_office:
-    friendly_name: "Office Kodi"
-    haaska_hidden: true
-
-  media_player.kodi_living_room:
-    friendly_name: "Living Room Kodi"
-    haaska_hidden: true
-
-  media_player.kodi_bedroom:
-    friendly_name: "Bedroom Kodi"
-    haaska_hidden: true
-
-## AppleTV
-  media_player.apple_tv:
-    friendly_name: "Apple TV"
-    haaska_hidden: true
-
-## Chromecast
-  media_player.rnmcast:
-    friendly_name: Chromecast
-    haaska_hidden: true
-
-#####################################################################
-### SCRIPTS (pool light)
-#####################################################################
-  script.pool_blue:
-    hidden: true
-    friendly_name: "Pool Blue"
-    icon: mdi:lightbulb
-
-  script.pool_green:
-    hidden: true
-    friendly_name: "Pool Green"
-    icon: mdi:lightbulb
-
-  script.pool_color_magenta:
-    hidden: true
-    friendly_name: "Pool Magenta"
-    icon: mdi:lightbulb
-
-  script.pool_red:
-    hidden: true
-    friendly_name: "Pool Red"
-    icon: mdi:lightbulb
-
-  script.pool_color_white:
-    hidden: true
-    friendly_name: "Pool White"
-    icon: mdi:lightbulb
-
-  script.pool_caribbean:
-    hidden: true
-    friendly_name: "Pool Caribbean"
-    icon: mdi:lightbulb
-
-  script.pool_cycle:
-    hidden: true
-    friendly_name: "Pool Cycle"
-    icon: mdi:lightbulb
-
-  script.pool_party:
-    hidden: true
-    friendly_name: "Pool Party"
-    icon: mdi:lightbulb
-
-  script.pool_patriotic:
-    hidden: true
-    friendly_name: "Pool Patriotic"
-    icon: mdi:lightbulb
-
-  script.pool_romance:
-    hidden: true
-    friendly_name: "Pool Romance"
-    icon: mdi:lightbulb
-
-  script.pool_royal:
-    hidden: true
-    friendly_name: "Pool Royal"
-    icon: mdi:lightbulb
-
-  script.pool_sunset:
-    hidden: true
-    friendly_name: "Pool Sunset"
-    icon: mdi:lightbulb
-
-#####################################################################
 ### SCRIPTS (other)
 #####################################################################
-
-## Restart Home Assistant
-  script.restart_ha:
-    friendly_name: "Restart Home Assistant"
-    icon: mdi:recycle
-
   script.script_test:
     friendly_name: "Test Script"
     icon: mdi:play-circle
@@ -504,22 +131,10 @@
     hidden: true
     icon: mdi:play-circle
 
-  script.unlock_megs:
-    friendly_name: "Unlock Door for Megan"
-    hidden: true
-    icon: mdi:play-circle
-
-  automation.unlock_door_for_megs:
-    friendly_name: "Unlock Door for Megan"
-
   script.time_temp:
     friendly_name: "Time and Temp"
     hidden: true
     icon: mdi:play-circle
-
-  script.mbr_night_light:
-#    friendly_name: "Night Light"
-    icon: mdi:weather-night
 
   script.tv_power_off:
     friendly_name: "TV Shutdown"
@@ -537,11 +152,6 @@
   script.bedtime:
     friendly_name: "Bedtime"
     icon: mdi:hotel
-
-## master bedroom night mode
-  script.master_bedroom_night_time:
-    friendly_name: "Master Bedroom Night Time"
-    icon: mdi:weather-night
 
 ## early morning scene
   scene.early_morning:
@@ -606,9 +216,8 @@
     haaska_hidden: true
 #    persistent: true
 
-  input_boolean.rain:
-    haaska_hidden: true
-#    persistent: true
+#  input_boolean.rain:
+#    haaska_hidden: true
 
   input_boolean.state_change_test:
     haaska_hidden: true
@@ -738,40 +347,6 @@
 ### SENSORS (status)
 #####################################################################
 
-## Speed Test
-  sensor.speedtest_ping:
-    friendly_name: "Ping"
-    icon: mdi:clock
-
-  sensor.speedtest_download:
-    friendly_name: "Download"
-    icon: mdi:arrow-down
-
-  sensor.speedtest_upload:
-    icon: mdi:arrow-up
-    friendly_name: "Upload"
-
-## SabNZB
-  sensor.sab_disk:
-    friendly_name: "Total Storage"
-    icon: mdi:harddisk
-
-  sensor.sab_disk_free:
-    friendly_name: "Storage Remaining"
-    icon: mdi:chart-pie
-
-  sensor.sab_queue:
-    friendly_name: "Queued for Download"
-    icon: mdi:clipboard-arrow-down
-
-  sensor.sab_speed:
-    friendly_name: "DL Speed"
-    icon: mdi:speedometer
-
-  sensor.sab_status:
-    friendly_name: "Current State"
-    icon: mdi:check
-
 ## Commute Times (google traffic)
   sensor.rick_work_commute:
     friendly_name: "Rick Commute to Work"
@@ -827,86 +402,3 @@
   input_boolean.condition_5:
     friendly_name: "Test Condition 5"
     icon: mdi:checkbox-marked-circle
-
-#####################################################################
-### SENSORS (weather)
-#####################################################################
-
-  sensor.dark_sky_humidity:
-    friendly_name: "Humidity"
-    icon: mdi:water-percent
-  sensor.dark_sky_dew_point:
-    friendly_name: "Dew Point"
-    icon: mdi:water
-  sensor.dark_sky_daily_summary:
-    friendly_name: "Daily Summary"
-    icon: mdi:calendar-clock
-  sensor.dark_sky_pressure:
-    friendly_name: "Pressure"
-    icon: mdi:nature
-  sensor.dark_sky_temperature:
-    icon: mdi:thermometer
-    friendly_name: "Temperature"
-  sensor.dark_sky_wind_speed:
-    icon: mdi:weather-windy
-    friendly_name: "Wind Speed"
-  sensor.dark_sky_summary:
-    friendly_name: "Current Conditions"
-    icon: mdi:map-marker-radius
-  sensor.dark_sky_precip_probability:
-    friendly_name: "Chance Rain"
-    icon: mdi:weather-rainy
-  sensor.dark_sky_precip_intensity:
-    friendly_name: "Predicted Rain"
-    icon: mdi:weather-rainy
-  sensor.dark_sky_visibility:
-    friendly_name: "Visibility"
-  sensor.dark_sky_cloud_coverage:
-    friendly_name: "Cloud Cover"
-    icon: mdi:weather-partlycloudy
-  sensor.dark_sky_wind_bearing:
-    friendly_name: "Wind Bearing"
-    icon: mdi:compass
-  sensor.dark_sky_apparent_temperature:
-    friendly_name: "Feels Like"
-  sensor.dark_sky_nearest_storm_distance:
-    friendly_name: "Nearest Storm"
-    icon: mdi:weather-lightning-rainy
-
-## WUnderground PWS 
-  sensor.pws_weather:
-    friendly_name: "Current Condition"
-  sensor.pws_temp_f:
-    friendly_name: "Temperature"
-  sensor.pws_feelslike_string:
-    friendly_name: "Feels Like"
-    icon: mdi:thermometer
-  sensor.pws_precip_today_string:
-    friendly_name: "Precipitation"
-    icon: mdi:weather-rainy
-  sensor.pws_wind_string:
-    friendly_name: "Wind"
-    icon: mdi:weather-windy
-  sensor.pws_heat_index_string:
-    friendly_name: "Heat Index"
-    icon: mdi:weather-sunny
-  sensor.pws_relative_humidity:
-    friendly_name: "Humidity"
-    icon: mdi:water-percent
-  sensor.pws_dewpoint_string:
-    friendly_name: "Dew Point"
-    icon: mdi:water
-  sensor.pws_pressure_in:
-    friendly_name: "Pressure Inches"
-    icon: mdi:thermometer-lines
-  sensor.pws_pressure_mb:
-    friendly_name: "Pressure Mbar"
-    icon: mdi:nature
-  sensor.pws_solarradiation:
-    friendly_name: "Radiation"
-    icon: mdi:radioactive
-  sensor.pws_uv:
-    friendly_name: "UV Index"
-    icon: mdi:sunglasses
-  sensor.pws_visibility_mi:
-    friendly_name: "Visibility"
