--- a/scripts/restart_ha.yaml
+++ b/scripts/restart_ha.yaml
@@ -1,14 +1,14 @@
-restart_ha:
-  sequence:
-  - service: homeassistant.restart
-
-  - service: notify.pushbullet
-    data:
-      title: "System Restart"
-      target: "device/Chrome"
-      message: "Restarting Home Assistant at {{ states('sensor.date__time') }}"
-# notify iOS
-  - service: notify.ios_iphwn666
-    data:
-      title: "System Restart"
-      message: "Restarting Home Assistant at {{ states('sensor.date__time') }}"
+#restart_ha:
+#  sequence:
+#  - service: homeassistant.restart
+#
+#  - service: notify.pushbullet
+#    data:
+#      title: "System Restart"
+#      target: "device/Chrome"
+#      message: "Restarting Home Assistant at {{ states('sensor.date__time') }}"
+## notify iOS
+#  - service: notify.ios_iphwn666
+#    data:
+#      title: "System Restart"
+#      message: "Restarting Home Assistant at {{ states('sensor.date__time') }}"
